# geo-core-rs

./: .gitignore  Cargo.toml  README.md
src/: constants.rs  crs.rs  geometry.rs  latlng.rs  lib.rs  line.rs  line_utils.rs  main.rs  point.rs  point3d.rs  point_utils.rs  polygon.rs  polyline.rs  rectangle.rs  utils.rs
