[package]
name = "geo-core"
version = "0.1.0"
authors = ["Ben Calnan <bencalnan@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["geospatial"]
include = ["/src"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
