[package]
name = "geo-core"
version = "0.1.1"
authors = ["Ben Calnan <bencalnan@gmail.com>"]
description = "Common tools for working with spatial data"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["geospatial"]
include = ["/src"]
repository = "https://github.com/bencalnan/geo-core-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
